--- a/pagina.css
+++ b/pagina.css
@@ -169,3 +169,44 @@ footer ul li {
             margin-bottom: 1px;
     
         }
+
+        
+        
+        
+        
+        
+        
+        
+        body {
+  font-family: Arial, sans-serif;
+  background-color: #f0f0f0;
+  margin: 0;
+  padding: 0;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  height: 100vh;
+}
+
+.container {
+  text-align: center;
+  background-color: #fff;
+  padding: 20px;
+  border-radius: 8px;
+  box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
+}
+
+h1 {
+  color: #333;
+}
+
+p {
+  font-size: 1.2rem;
+  color: #666;
+}
+
+#contador-visitas {
+  font-size: 2rem;
+  font-weight: bold;
+  color: #007bff;
+}
